src/test/resources/influxDb.yaml
apiVersion: v1
kind: Pod
metadata:  
  name: influxdb
spec:  
  containers:    
   - image: influxdb
     name: influxdb      
     ports:        
      - containerPort: 8083          
        name: admin          
        protocol: TCP        
      - containerPort: 8086          
        name: http          
        protocol: TCP
