src/test/resources/pipyHostVolume.yaml
apiVersion: v1
kind: Pod
metadata:  
  labels:    
    name: mac 
  name: machostvolume
spec:  
  volumes:   
    - name: "macdata"      
      hostPath:       
      path: "/var/lib/macdata"  
  containers:    
     - image: pypimac      
       name: pipymac      
       volumeMounts:        
          - mountPath: ".pypimac"          
            name: "pypi-mac"
