src/test/resources/podCreation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: asreitz-site
  labels:
    app: web
spec:
  containers:
    - name: front-end
      image: nginx
      ports:
        - containerPort: 80
    - name: elasticsearch-centos7
      image: million12/elasticsearch:latest
